2017-10-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* packaging.makefile (EXTRA_DIST): Comment this out. We will on longer
	include rpm spec files in the tarballs, since changing the spec file
	should not require us to bump the tarball version.

2017-08-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* common.h (GAWKEXTLIB_COMMON_INIT): If NLS is not available, eliminate
	the call to bindtextdomain by checking for HAVE_LIBINTL_H.

2017-02-11         Manuel Collado       <m-collado@users.sourceforge.net>

	* doc.makefile: Updated to FDL-1.3
	* fdl.texi: deleted, obsolete.

2017-02-11         Manuel Collado       <m-collado@users.sourceforge.net>

	* fdl-1.3.texi: added, current version of the license.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* fdl.texi: Fix FSF address.

2016-05-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* common.h: If included by a file that has
	'#define SKIP_FILE_SCOPE_DECLARATIONS', then omit file-scope
	declarations of api, ext_id, and plugin_is_GPL_compatible. This
	allows the development of extensions that use multiple source
	files that need to share api and ext_id, and have a single
	instance of plugin_is_GPL_compatible.

2015-01-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* test.makefile (AWK): AWKLIBPATH should include default gawk library
	location so we can use extensions bundled with gawk in our tests.

2014-12-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* extension.makefile (GAWKEXT_MODULE_FLAGS): Define common value
	for extension LDFLAGS.

2014-12-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* doc.makefile (TROFF, SEDME): Remove unused definitions.

2014-11-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkext.m4 (AC_GAWK_EXTENSION): Fix autoconf quoting bug -- must
	use test instead of [] because m4 uses [] for quoting.